LN-146: Prevented version field overlap with other content.

--- a/src/La/LearnodexBundle/Resources/public/css/main.css
+++ b/src/La/LearnodexBundle/Resources/public/css/main.css
@@ -36,7 +36,7 @@ textarea {
 }
 
 #viewport-area {
-    height: 100%;
+    min-height: 100%;
     display: flex;
     display: -webkit-flex;
     align-items: stretch;
